Enum "users_pjs_enum" {
  "created2"
  "running2"
  "done2"
  "failure2"
}

Enum "users_pjs2_enum" {
  "created2"
  "running2"
  "done2"
  "failure2"
}

Enum "users_pg_enum" {
  "male"
  "female"
}

Enum "users_pg2_enum" {
  "male2"
  "female2"
}

Enum "ecommerce_users_ejs_enum" {
  "created2"
  "running2"
  "done2"
  "failure2"
}

Enum "ecommerce_users_ejs2_enum" {
  "created2"
  "running2"
  "done2"
  "failure2"
}

Enum "ecommerce_users_eg_enum" {
  "male"
  "female"
}

Enum "ecommerce_users_eg2_enum" {
  "male2"
  "female2"
}

Table "users" {
  "id" int [pk]
  "name" varchar(255)
  "pjs" users_pjs_enum
  "pjs2" users_pjs2_enum
  "pg" users_pg_enum
  "pg2" users_pg2_enum
}

Table "products" {
  "id" int [pk]
  "name" varchar(255) [note: 'Product name']
  Note: 'Notes about products table'
}

Ref "FK_1":"schemaA"."locations"."id" < "schemaA"."products"."lid" [delete: cascade]

Ref:"users"."id" < "ecommerce"."users"."id"

Ref:"users"."name" < "ecommerce"."users"."id"

Ref:"ecommerce"."users"."id" < "schemaA"."products"."name"

Ref:"users"."id" < "schemaA"."locations"."name"

Table "ecommerce"."users" {
  "id" int [pk]
  "name" varchar(255)
  "ejs" ecommerce_users_ejs_enum
  "ejs2" ecommerce_users_ejs2_enum
  "eg" ecommerce_users_eg_enum
  "eg2" ecommerce_users_eg2_enum
  Note: 'Table users of schema ecommerce'
}

Table "schemaA"."products" {
  "id" int [pk]
  "name" varchar(255)
  "lid" int
}

Table "schemaA"."locations" {
  "id" int [pk]
  "name" varchar(255)
}
